[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/task.gd" type="Script" id=1]

[node name="task" type="Control"]
margin_right = 1201.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0823529, 0.0745098, 0.207843, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name_task" type="Label" parent="."]
anchor_left = 0.0407994
anchor_top = 0.125
anchor_right = 0.397169
anchor_bottom = 0.4125
text = "Name task"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CheckBox" type="CheckBox" parent="."]
margin_left = 10.0
margin_top = 23.0
margin_right = 34.0
margin_bottom = 54.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="status" type="Label" parent="."]
anchor_left = 0.746878
anchor_top = 0.0625002
anchor_right = 0.994172
anchor_bottom = 0.35
text = "Статус: Выполняется"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label2" type="Label" parent="."]
anchor_left = 0.733555
anchor_top = 0.5125
anchor_right = 0.995837
anchor_bottom = 0.8
text = "Дата добавления: 10:10:2022 16:48"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.041632
anchor_top = 0.5375
anchor_right = 0.130724
anchor_bottom = 0.825
margin_left = -3.8147e-06
margin_right = -67.0
text = "Приоритет: 0"
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="CheckBox" to="." method="_on_CheckBox_pressed"]
